# quant-system

./: .dockerignore  .env.example  .flake8  .gitignore  .gitmodules  .markdownlint.yaml  .pre-commit-config.yaml  .ruff.toml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DOCKERFILE  LICENSE  README.md  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  quant-strategies  ruff.toml  sonar-project.properties
.github/: CODEOWNERS  CONTRIBUTING.md  SECURITY.md  dependabot.yml  dependency-review-config.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  strategy_request.md
.github/workflows/: ci-matrix.yml  ci.yml  codeql.yml  daily-backtest.yml  gitleaks.yml  main-branch-ci.yml  pr-review.yml  release.yml  update-changelog.yml
config/: assets_config.json  config.yaml  example.yaml  optimization_config.json  test_bonds.json  test_portfolio.json  test_single_bond.json  test_small_bonds.json
config/collections/: bonds.json  bonds_majors.yaml  commodities.json  commodities_majors.yaml  crypto.json  forex.json  forex_majors.yaml  indices.json  indices_majors.yaml  stocks_dax.json  stocks_european.json  stocks_traderfox_dax.json  stocks_traderfox_european.json  stocks_traderfox_us_financials.json  stocks_traderfox_us_tech.json  stocks_us_financials.json  stocks_us_healthcare.json  stocks_us_tech.json
config/portfolios/: bonds.json  commodities.json  crypto.json  forex.json  indices.json  stocks_traderfox_dax.json  stocks_traderfox_european.json  stocks_traderfox_us_financials.json  stocks_traderfox_us_healthcare.json  stocks_traderfox_us_tech.json  test_simple.json  world_indices.json
docker/: Dockerfile
docs/: AGENT.md  COMPLETE_CLI_GUIDE.md  DATA_SOURCES_GUIDE.md  DOCKER_GUIDE.md  FINAL_SYSTEM_SUMMARY.md  OPTIMIZATION_GUIDE.md  PRODUCTION_READY.md  README.md  SYMBOL_TRANSFORMATION_GUIDE.md  TESTING_GUIDE.md  cli-guide.md  data-sources.md  development.md  docker.md  feature-roadmap.md  features.md  future-features.md
examples/: comprehensive_example.py  optimization_example.py
examples/output/: example_portfolios.json  portfolio_analysis.json
exports/: bonds_export.txt  commodities_export.txt  crypto1_export.txt  crypto_batch1_export.txt  crypto_batch2_export.txt  crypto_batch3_export.txt  crypto_subset1_export.txt  forex_export.txt  futures_export.txt  stocks_batch1_export.txt  stocks_batch2_export.txt  stocks_batch3_export.txt  stocks_batch4_export.txt  stocks_batch5_export.txt  world_indices_export.txt
exports/reports/: .gitkeep
exports/tradingview_alerts/: alerts_20250806.md
monitoring/: alert_rules.yml  prometheus.yml
reports_output/: multi_asset_mean_reversion.html
scripts/: README.md  check.sh  check_precommit.sh  ci_validation.py  code_quality.sh  deduplicate_portfolios.py  format.sh  generate_changelog.py  init-db.sql  run-docker.sh  run-tests.sh  setup.sh  test_cicd_pipeline.py  test_local_validation.py  test_runner.sh
scripts/debug/: memory_profile.py
scripts/hooks/: pre-commit-changelog.sh
src/: __init__.py  main.py
src/ai/: __init__.py  ai_report_generator.py  investment_recommendations.py  llm_client.py  models.py
src/api/: main.py
src/backtest/: runner.py
src/backtesting_engine/: data_loader.py  engine.py  optimized_engine.py  result_analyzer.py  strategy_runner.py  trade_execution.py
src/cli/: direct_backtest_cli.py  main.py  unified_cli.py
src/core/: __init__.py  backtest_engine.py  backtest_engine_old.py  cache_manager.py  data_manager.py  direct_backtest.py  external_strategy_loader.py  portfolio_manager.py  result_analyzer.py  simple_backtest_engine.py  strategy.py
src/data/: alpaca_source.py  ccxt_source.py  polygon_source.py  tiingo_source.py  yfinance_source.py
src/data_scraper/: advanced_cache.py  cache.py  data_cleaner.py  data_manager.py  fetcher.py  multi_source_manager.py  parser.py  scheduler.py  scraper.py  storage.py  transformer.py  validator.py
src/database/: __init__.py  create_tables.py  db.py  db_connection.py  models.py  query_helpers.py  send_data.py  unified_models.py
src/models/: asset.py  backtest_result.py  strategy.py  trade.py  user.py
src/optimizer/: objective_function.py  optimization_runner.py  optimize.py  parameter_tuner.py  result_analyzer.py
src/portfolio/: __init__.py  advanced_optimizer.py  backtest_runner.py  metrics_processor.py  parameter_optimizer.py  portfolio_backtest.py  portfolio_optimizer.py  timeframe_optimizer.py
src/reporting/: __init__.py  advanced_reporting.py  ai_report_generator.py  collection_report.py  detailed_portfolio_report.py  detailed_portfolio_report_old.py  html.py  tradingview.py
src/reports/: report_exporter.py  report_formatter.py  report_generator.py  report_visualizer.py
src/services/: asset_service.py  backtest_service.py  optimization_service.py  strategy_service.py  trade_service.py  user_service.py
src/strategies/: registry.py
src/utils/: __init__.py  add_tickers.py  all_strategies_csv_exporter.py  cli.py  config.py  config_manager.py  csv_exporter.py  file_utils.py  logger.py  metrics_validator.py  raw_data_csv_exporter.py  report_organizer.py  simple_csv_exporter.py  tradingview_alert_exporter.py  tv_alert_exporter.py
tests/: conftest.py  test_ai_recommendations.py  test_data_manager.py  test_integration.py  test_metrics_validator.py  test_portfolio.py  test_raw_data_csv_exporter.py  test_strategy.py  test_suite.py
tests/backtesting_engine/: test_engine.py
tests/cli/: test_cli.py  test_unified_cli_probe.py  test_unified_cli_resolver.py
tests/core/: test_backtest_engine.py  test_cache_manager.py  test_cache_manager_simple.py  test_data_manager.py  test_data_manager_freshness.py  test_data_manager_split_cache.py  test_portfolio_manager.py  test_result_analyzer.py  test_strategy.py
tests/data_scraper/: test_data_loader.py
tests/database/: test_db_connection.py
tests/integration/: test_full_workflow.py  test_workflow.py
tests/optimizer/: test_parameter_tuner.py
tests/performance/: test_benchmarks.py
tests/portfolio/: test_metrics_processor.py  (+2 more)
(+83 files in other folders)
