[tool.poetry]
name = "quant-system"
version = "0.1.0"
description = "A Python-based Quant Trading System with FastAPI, Backtrader, and yfinance"
authors = ["LouisLetcher <heck.manu@icloud.com>"]
license = "Proprietary"
readme = "README.md"
packages = [{ include = "src", from = "." }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = "^0.115"
uvicorn = "^0.34"
pydantic = "^2.11"
yfinance = "^0.2"
yfinance-cache = "^0.7"
pandas = "^2.2"
numpy = "^1.24.0"
matplotlib = "^3.10"
jinja2 = "^3.1"
sqlalchemy = "^2.0"
asyncpg = "^0.30"
alembic = "^1.15"
bayesian-optimization = "^2.0"
backtesting = "^0.6"
requests = "^2.31.0"
scipy = "^1.11.0"
scikit-learn = "^1.5.0"
aiohttp = "^3.9.0"
plotly = "^5.18.0"
seaborn = "^0.13.0"
tqdm = "^4.66.0"
pytz = "^2024.1"
python-dateutil = "^2.8.2"
click = "^8.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-cov = "^6.0"
pytest-mock = "^3.14"
pytest-asyncio = "^0.25"
pytest-xdist = "^3.6"
black = "^25.1"
isort = "^6.0"
pre-commit = "^4.2"
ruff = "^0.11"
mypy = "^1.13"
coverage = "^7.6"

[tool.poetry.scripts]
start = "uvicorn src.api.main:app --host 0.0.0.0 --port 8000"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"